# GT

./: README.md
data_for_GT/: botijo.ply  bunny_botsch.off  bunny_botsch.ply  bunny_botsch_red.off  bunny_botsch_simplified_500F.off  fertility.ply  igea.ply  simple_cube.off
src/: .view.cpp.swp  CMakeLists.txt  check.py  main.cpp  view.cpp
src/Cylinder/: main.cpp
src/SimpleBoxCylinder/: main.cpp
src/Sphere/: CMakeLists.txt
